--- a/Stockers/app/src/main/AndroidManifest.xml
+++ b/Stockers/app/src/main/AndroidManifest.xml
@@ -16,7 +16,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".LoanCalculator.LoanCalculatorActivity"></activity>
+        <activity android:name=".LoanCalculator.LoanCalculatorActivity"
+            android:theme="@style/Theme.AppCompat"/>
     </application>
 
 </manifest>
