--- a/Stockers/app/src/main/AndroidManifest.xml
+++ b/Stockers/app/src/main/AndroidManifest.xml
@@ -17,8 +17,11 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".Note"
+            android:name=".NoteActivity"
             android:label="@string/title_activity_note"></activity>
+        <activity
+            android:name=".NewNoteActivity"
+            android:label="@string/title_activity_new_note"></activity>
     </application>
 
 </manifest>
