--- a/Stockers/app/src/main/AndroidManifest.xml
+++ b/Stockers/app/src/main/AndroidManifest.xml
@@ -23,6 +23,13 @@
             android:name=".Notes.NewNoteActivity"
             android:label="@string/title_activity_new_note"></activity>
         <activity android:name=".Hints.FinancialHintsActivity"></activity>
-    </application>
+        <activity android:name=".Hints.FinancialHintsActivity" />
 
+
+        <service android:name=".Messaging.StockersFirebaseMessagingService">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>
+    </application>
 </manifest>
