--- a/Stockers/app/src/main/AndroidManifest.xml
+++ b/Stockers/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
         </activity>
         <activity android:name=".AboutActivity"></activity>
         <activity android:name=".SettingsActivity"></activity>
+        <activity android:name=".StockQuote.StockQuotesActivity"></activity>
         <activity
             android:name=".NoteActivity"
             android:label="@string/title_activity_note"></activity>
