--- a/Stockers/app/src/main/AndroidManifest.xml
+++ b/Stockers/app/src/main/AndroidManifest.xml
@@ -16,8 +16,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".AboutActivity"></activity>
-        <activity android:name=".SettingsActivity"></activity>
+        <activity android:name=".Menu.AboutActivity"></activity>
+        <activity android:name=".Menu.SettingsActivity"></activity>
         <activity android:name=".StockQuote.StockQuotesActivity"></activity>
         <activity android:name=".StockQuote.ShowStockActivity"></activity>
         <activity
