--- a/Stockers/app/src/main/AndroidManifest.xml
+++ b/Stockers/app/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
         <activity android:name=".Hints.FinancialHintsActivity"></activity>
     </application>
         <activity android:name=".Hints.FinancialHintsActivity" />
-        <activity android:name=".Messaging.Messaging"></activity>
+        <activity android:name=".Messaging.NewsArticles"></activity>
         <service android:name=".Messaging.StockersFirebaseMessagingService">
             <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
