--- a/Stockers/app/src/main/AndroidManifest.xml
+++ b/Stockers/app/src/main/AndroidManifest.xml
@@ -17,10 +17,10 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".NoteActivity"
+            android:name=".Notes.NoteActivity"
             android:label="@string/title_activity_note"></activity>
         <activity
-            android:name=".NewNoteActivity"
+            android:name=".Notes.NewNoteActivity"
             android:label="@string/title_activity_new_note"></activity>
         <activity android:name=".Hints.FinancialHintsActivity"></activity>
     </application>
