Add a SubscriptionManager class that provides two methods, one to subscribe to a topic and the other to unsubscribe

--- a/Stockers/app/src/main/AndroidManifest.xml
+++ b/Stockers/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".Hints.FinancialHintsActivity" />
-        <activity android:name=".Messaging.NewsArticles"></activity>
+        <activity android:name=".Messaging.NewsArticlesActivity"></activity>
 
         <service android:name=".Messaging.StockersFirebaseMessagingService">
             <intent-filter>
