--- a/Stockers/app/src/main/AndroidManifest.xml
+++ b/Stockers/app/src/main/AndroidManifest.xml
@@ -24,7 +24,7 @@
             android:label="@string/title_activity_new_note"></activity>
         <activity android:name=".Hints.FinancialHintsActivity"></activity>
         <activity android:name=".Hints.FinancialHintsActivity" />
-        <activity android:name=".Messaging.NewsArticles"></activity>
+        <activity android:name=".Messaging.NewsArticlesActivity"></activity>
 
 
         <service android:name=".Messaging.StockersFirebaseMessagingService">
