Finish adding the themse to loan and articles

--- a/Stockers/app/src/main/AndroidManifest.xml
+++ b/Stockers/app/src/main/AndroidManifest.xml
@@ -16,8 +16,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".LoanCalculator.LoanCalculatorActivity"
-            android:theme="@style/Theme.AppCompat"/>
+        <activity android:name=".LoanCalculator.LoanCalculatorActivity"/>
         <activity android:name=".Menu.AboutActivity"></activity>
         <activity android:name=".Menu.SettingsActivity"></activity>
         <activity android:name=".StockQuote.StockQuotesActivity"></activity>
