Fix minor issues with the staging branch Fix the issues with the manifest that happened after the previous merge request. Removed the line that launched an intent during onCreate.

--- a/Stockers/app/src/main/AndroidManifest.xml
+++ b/Stockers/app/src/main/AndroidManifest.xml
@@ -26,8 +26,7 @@
         </activity>
         <activity android:name=".Hints.FinancialHintsActivity" />
         <activity android:name=".CurrecnyExchange.CurrencyExchangeActivity"/>
-        <activity android:name=".LoanCalculator.LoanCalculatorActivity"
-            android:theme="@style/Theme.AppCompat"/>
+        <activity android:name=".LoanCalculator.LoanCalculatorActivity"/>
         <activity android:name=".Menu.AboutActivity"></activity>
         <activity android:name=".Menu.SettingsActivity"></activity>
         <activity android:name=".StockQuote.StockQuotesActivity"></activity>
